fix dark mode initial flick

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -61,4 +61,7 @@
   }
 
   /*}*/
+  .no-transition {
+    transition: none !important;
+  }
 }
